# Le-Cercle

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
crates/server/: .env.example  .gitignore  Cargo.toml
crates/server/db/: clean-database.sql
crates/server/migrations/: 20260716094727_init.sql  20260720141225_add_pseudo_to_user.sql
crates/server/src/: auth.rs  bootstrap.rs  handlers.rs  main.rs  middlewares.rs  models.rs  validation.rs
crates/shared/src/: lib.rs
src/: App.css  App.module.css  App.tsx  api.ts  lib.ts  main.tsx  models.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Auth/: Auth.module.css  AuthProvider.tsx  AuthScreen.module.css  AuthScreen.tsx  LoginForm.tsx  PasswordInput.module.css  PasswordInput.tsx  RegisterForm.tsx  ServerLink.module.css  ServerLink.tsx  auth.tsx
src/Servers/: AddServers.module.css  AddServers.tsx  ListModal.module.css  ListModal.tsx  ManageModal.module.css  ManageModal.tsx  ManageServers.module.css  ManageServers.tsx  PasswordInput.module.css  PasswordInput.tsx  ServersList.module.css  ServersList.tsx  ServersProvider.tsx  TrashModal.module.css  TrashModal.tsx  servers.ts
src/Theme/: AccentColorModal.module.css  AccentColorModal.tsx  ThemeModal.module.css  ThemeModal.tsx  ThemeProvider.tsx  ThemeToggle.module.css  ToggleTheme.tsx
