[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
shared = { path = "../shared" }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
dotenvy = "0.15.7"
rand = "0.10.2"
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = "1.24.0"

